third_party/rlbox/include/rlbox_type_traits.hpp
@@ -383,7 +383,7 @@ namespace convert_detail {
     T_LongLongType,
     T_PointerType,
     std::enable_if_t<std::is_unsigned_v<T> && !std::is_same_v<T, bool> &&
-                     !std::is_const_v<T>>>
+                     !std::is_const_v<T> && !std::is_enum_v<T>>>
   {
     using type = std::make_unsigned_t<
       typename convert_base_types_t_helper<std::make_signed_t<T>,
@@ -407,9 +407,10 @@ namespace convert_detail {
     T_LongType,
     T_LongLongType,
     T_PointerType,
-    std::enable_if_t<(std::is_same_v<bool, T> || std::is_same_v<void, T> ||
-                      std::is_same_v<char, T> || std::is_floating_point_v<T> ||
-                      std::is_enum_v<T>)&&!std::is_const_v<T>>>
+    std::enable_if_t<(
+      std::is_same_v<bool, T> || std::is_same_v<void, T> ||
+      std::is_same_v<char, T> || std::is_same_v<signed char, T> ||
+      std::is_floating_point_v<T> || std::is_enum_v<T>)&&!std::is_const_v<T>>>
   {
     using type = T;
   };
